--- a/.isort.cfg
+++ b/.isort.cfg
@@ -1,2 +1,2 @@
 [settings]
-known_third_party = click,freezegun,geopy,marshmallow,marshmallow_dataclass,pytest
+known_third_party = click,freezegun,geopy,marshmallow,marshmallow_dataclass,numpy,pandas,pytest
