--- a/.isort.cfg
+++ b/.isort.cfg
@@ -1,3 +1,3 @@
 [settings]
 line_length=120
-known_third_party = click,freezegun,geopy,marshmallow,marshmallow_dataclass,numpy,pandas,pytest
+known_third_party = click,freezegun,geopy,marshmallow,marshmallow_dataclass,numpy,pandas,pytest,setuptools
